--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "firebase": "^7.9.1",
+    "firebase": "^7.9.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-easy-firestore": "^1.35.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
